Fix whitespacing nonsense below headers.

--- a/assets/css/modules/_layout.scss
+++ b/assets/css/modules/_layout.scss
@@ -7,10 +7,15 @@
 // ======= CONTAINER ======= //
 
 main {
-  margin-top: 8rem;
 
   .alert + &{
-    margin-top: 10rem;
+    top: 6.25rem;
+    height: calc(100% - 6.25rem);
+  }
+
+  .alert:empty + &{
+    top: 3.25rem;
+    height: calc(100% - 3.25rem);
   }
 }
 
